# pdf-mailmerge

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/pdf-mailmerge/: letters_config.yml  produce_pdfs.py  produce_renders.py  utils.py
src/pdf_mailmerge/: __init__.py  letters_config.yml  produce_html.py  produce_pdfs.py  produce_renders.py
