[tool.poetry]
name = "pdf-mailmerge"
version = "0.1.0"
description = "Mail merge PDFs and HTML documents from CSV data and Jinja templates"
authors = ["Joshua Maymir <you@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/successacademycharterschools/pdf-mailmerge"
classifiers = [
    "Topic :: Communications :: Email",
    "Topic :: Text Processing :: Markup :: HTML",
    "Environment :: Console",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.3"
numpy = "^1.20.1"
tqdm = "^4.59.0"
pdfkit = "^0.6.1"
Jinja2 = "^2.11.3"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
